modify frontend and benmark